<resources>
    <string name="app_name">FoodRunner</string>
    <string name="foodrunner">FoodRunner</string>
    <string name="mobile_number_text">Mobile Number(10 digits)</string>
    <string name="password_text">Password</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="goto_signup"><u>Don\'t have an account? Sign up now</u></string>
    <string name="preference_file_name">Login Preferences</string>
    <string name="preference_register">registration Preferences</string>
    <string name="forget_page_text">Enter you registered mobile number and email below:</string>
    <string name="email_address">Email Address</string>
    <string name="head_text">Enter the received OTP below</string>
    <string name="new_pass">New Password(Min 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name(Min 3 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="register_password">Password(Min 4 character)</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_food">Name of Food</string>
    <string name="price_of_food">Price of Food</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="food_name">Food Name</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="place_order_rs">Place Order (Rs)</string>
    <string name="you_do_not_have_any_favourite_restaurants">You do not have any favourite restaurants</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="answer">Answer</string>
    <string name="questions">Questions</string>
    <string name="question1">Q1. Why is FoodZest doing this?</string>
    <string name="answer1">A1. At FoodZest we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. FoodZest Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question2">Q2. How are you guys different?</string>
    <string name="answer2">A2. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for FoodZest Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="question3">Q3. Why is FoodZest doing this?</string>
    <string name="answer3">A3. At FoodZest we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. FoodZest Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question4">Q4. How are you guys different?</string>
    <string name="answer4">A4. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for FoodZest Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="sort">Sort</string>
    <string name="search_restaurant">Search Restaurant</string>
    <string name="cant_find">Can\'t find any restaurant with that name</string>
</resources>