<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@color/red_500">
    
    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodrunner"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:padding="8dp"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cvMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLogo"
        android:backgroundTint="@color/red_500"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="45dp"
        app:cardCornerRadius="4dp">
        
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/mobile_number_text"
            android:maxLength="10"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textSize="16sp"
            android:drawableLeft="@drawable/ic_mobile_number"
            android:drawablePadding="4dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvMobile"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red_500"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password_text"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:maxLength="8"
            android:inputType="numberPassword"
            android:background="@color/white"
            android:textSize="16sp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="4dp"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Login"
        android:textAllCaps="false"
        android:layout_below="@+id/cvPass"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/red_A700"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@+id/btnLogin"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtGoToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_signup"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>



</RelativeLayout>