<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:background="@color/red_500">

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodrunner"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/txtExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_page_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/txtLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtExtra"
        android:backgroundTint="@color/red_500"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/mobile_number_text"
            android:maxLength="10"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textSize="16sp"
            android:paddingLeft="6dp"
            android:inputType="number"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvMobile"
        android:backgroundTint="@color/red_500"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email_address"
            android:maxLength="10"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textSize="16sp"
            android:paddingLeft="6dp"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Login"
        android:textAllCaps="false"
        android:layout_below="@+id/cvEmail"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/red_A700"
        android:padding="4dp"/>

</RelativeLayout>