<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity"
    android:background="@color/red_500">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHead"
        android:backgroundTint="@color/red_500"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="OTP(4 characters)"
            android:maxLength="4"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:inputType="number"
            android:textSize="16sp"
            android:paddingLeft="6dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvOTP"
        android:backgroundTint="@color/red_500"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/new_pass"
            android:maxLength="10"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textSize="16sp"
            android:paddingLeft="6dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvNewPass"
        android:backgroundTint="@color/red_500"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/confirm_password"
            android:maxLength="10"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textSize="16sp"
            android:paddingLeft="6dp"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Submit"
        android:textAllCaps="false"
        android:layout_below="@+id/cvConfirmPass"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/red_A700"
        android:padding="4dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progress_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</RelativeLayout>